add_library(
    progressslider
    progressslider.cpp
)
target_link_libraries(
    progressslider
    strokelabel
    Qt5::Widgets
    Qt5::Core
)

add_library(
    playermenu
    playermenu.cpp
    playermenu.ui
)
target_link_libraries(
    playermenu
    Qt5::Widgets
)

add_library(
    subtitlewidget
    subtitlewidget.cpp
)
target_link_libraries(
    subtitlewidget
    strokelabel
    Qt5::Widgets
    globalmediator
    dictionary_db
    mpvadapter
)

add_library(
    playercontrols
    playercontrols.ui
    playercontrols.cpp
)
target_link_libraries(
    playercontrols
    Qt5::Widgets
    iconfactory
    subtitlewidget
    progressslider
)

add_library(
    playeroverlay
    playeroverlay.cpp
)
target_link_libraries(
    playeroverlay
    playermenu
    subtitlewidget
    playercontrols
    definitionwidget
)